# zorozoro-experiments

./: .gitignore  LICENSE  README.md
01-corebluetooth/toio100/: AppDelegate.swift  BluetoothService.swift  Info.plist  ViewController.swift
01-corebluetooth/toio100.xcodeproj/: project.pbxproj
04-esp32/: app4.ino  server.py
04-esp32/a/: app1.ino  app2.ino  app3.ino
05-adafruitnrf/: app.ino  cube.h  lamp.h  motor.h
06-unitycontroller/: .gitignore
06-unitycontroller/Assets/: Bridge.cs  Client.cs  Cube.cs  Main.cs
06-unitycontroller/ProjectSettings/: ProjectSettings.asset
07-mqtt/: .gitignore
07-mqtt/Assets/: Main.cs
07-mqtt/ESP32/: app.ino
07-mqtt/ProjectSettings/: ProjectSettings.asset
07-mqtt/python/: pub.py  sub.py
08-adafruitmqtt/: app.ino
09-circuitpy/: code.py
10-powerpcb/: fp-info-cache  fp-lib-table  zrzr-cache.lib  zrzr.kicad_pcb  zrzr.kicad_pcb-bak  zrzr.net  zrzr.pro  zrzr.sch  zrzr.sch-bak
10-powerpcb/logo.pretty/: whatever_20mm.kicad_mod
10-powerpcb/zrzr-rev1-f/: zrzr-B_Cu.gbl  zrzr-B_Mask.gbs  zrzr-Edge_Cuts.gm1  zrzr-F_Cu.gtl  zrzr-F_Mask.gts  zrzr-F_SilkS.gto  zrzr-drl_map.ps  zrzr.drl  请不要加生产标识.txt
11-simulator/: .gitignore
11-simulator/Assets/: Cube.mat  Floor.mat  Macb.cs  OrbitControls.cs  Table.mat  map.psd
11-simulator/ProjectSettings/: ProjectSettings.asset
12-batterybenchmark/: .gitignore  b.py  discover.py
13-unitycontroller2/ProjectSettings/: ProjectSettings.asset
14-cubecontroller/: .gitignore  Cargo.toml
14-cubecontroller/src/: bridge.rs  bridge_manager.rs  cube.rs  main.rs
(+63 files in other folders)
