[package]
name = "cube_controller"
version = "0.1.0"
authors = ["Saqoosha <saqoosha@whatever.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
iced = "0.1.1"
iced_native = "0.2.2"

[profile.dev]
panic = "abort"
