[package]
authors = ["Saqoosha <saqoosha@whatever.co>"]
edition = "2018"
name = "cube_controller"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
crossbeam-channel = "0.5.0"

[profile.dev]
panic = "abort"
