[package]
authors = ["Saqoosha <saqoosha@whatever.co>"]
edition = "2018"
name = "cube_controller"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
crossbeam-channel = "0.5.0"
env_logger = "0.8.1"
glutin = "0.21.2"
lazy_static = "1.4.0"
log = "0.4.11"
nalgebra = "0.23.0"
ncollide2d = "0.26.1"
piston = "0.52.0"
piston2d-graphics = "0.37.0"
piston2d-opengl_graphics = "0.74.0"
pistoncore-glutin_window = "0.67.0"

[profile.dev]
panic = "abort"
